migrated code to jdk11 support with amazon q