@@ -2,34 +2,33 @@ package com.example.demo.service;
 
 import com.example.demo.model.Users;
 import com.example.demo.repository.UserRepository;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.util.*;
 
-import static org.junit.Assert.*;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
-public class UserServiceTest {
+@ExtendWith(MockitoExtension.class)
 
+class UserServiceTest {
+
+    @Mock
     private UserRepository userRepository;
+
+    @InjectMocks
     private UserService userService;
+
     private List<Users> testUsers;
 
-    @Before
-    public void setUp() {
-        userRepository = mock(UserRepository.class);
-        userService = new UserService();
-        // Use reflection to set the mock repository
-        try {
-            java.lang.reflect.Field field = UserService.class.getDeclaredField("userRepository");
-            field.setAccessible(true);
-            field.set(userService, userRepository);
-        } catch (Exception e) {
-            // Handle reflection exception
-        }
-        
-        testUsers = Arrays.asList(
+    @BeforeEach
+    void setUp() {
+        testUsers = List.of(
             new Users(1L, "John Doe", "john@example.com"),
             new Users(2L, "Jane Smith", "jane@test.com"),
             new Users(3L, "Bob Johnson", "bob@example.com")
@@ -37,18 +36,18 @@ public class UserServiceTest {
     }
 
     @Test
-    public void testGetAllUsers() {
+    void shouldGetAllUsers() {
         when(userRepository.findAll()).thenReturn(testUsers);
         
-        List<Users> result = userService.getAllUsers();
+        var result = userService.getAllUsers();
         
         assertEquals(3, result.size());
         verify(userRepository).findAll();
     }
 
     @Test
-    public void testAddUser() {
-        Users newUser = new Users(4L, "Alice Brown", "alice@test.com");
+    void shouldAddUser() {
+        var newUser = new Users(4L, "Alice Brown", "alice@test.com");
         
         userService.addUser(newUser);
         
@@ -56,77 +55,82 @@ public class UserServiceTest {
     }
 
     @Test
-    public void testGetUsersByDomain() {
+    void shouldGetUsersByDomain() {
         when(userRepository.findAll()).thenReturn(testUsers);
         
-        List<Users> result = userService.getUsersByDomain("example.com");
+        var result = userService.getUsersByDomain("example.com");
         
         assertEquals(2, result.size());
-        assertEquals("john@example.com", result.get(0).getEmail());
-        assertEquals("bob@example.com", result.get(1).getEmail());
+        assertTrue(result.stream().allMatch(user -> user.getEmail().endsWith("@example.com")));
     }
 
     @Test
-    public void testGetUsersByDomainNoMatch() {
+    void shouldReturnEmptyListWhenNoDomainMatch() {
         when(userRepository.findAll()).thenReturn(testUsers);
         
-        List<Users> result = userService.getUsersByDomain("nonexistent.com");
+        var result = userService.getUsersByDomain("nonexistent.com");
         
-        assertEquals(0, result.size());
+        assertTrue(result.isEmpty());
     }
 
     @Test
-    public void testSortUsersByName() {
+    void shouldSortUsersByName() {
         when(userRepository.findAll()).thenReturn(testUsers);
         
-        List<Users> result = userService.sortUsersBy("name");
+        var result = userService.sortUsersBy("name");
         
-        assertEquals("Bob Johnson", result.get(0).getName());
-        assertEquals("Jane Smith", result.get(1).getName());
-        assertEquals("John Doe", result.get(2).getName());
+        assertAll(
+            () -> assertEquals("Bob Johnson", result.get(0).getName()),
+            () -> assertEquals("Jane Smith", result.get(1).getName()),
+            () -> assertEquals("John Doe", result.get(2).getName())
+        );
     }
 
     @Test
-    public void testSortUsersByEmail() {
+    void shouldSortUsersByEmail() {
         when(userRepository.findAll()).thenReturn(testUsers);
         
-        List<Users> result = userService.sortUsersBy("email");
+        var result = userService.sortUsersBy("email");
         
-        assertEquals("bob@example.com", result.get(0).getEmail());
-        assertEquals("jane@test.com", result.get(1).getEmail());
-        assertEquals("john@example.com", result.get(2).getEmail());
+        assertAll(
+            () -> assertEquals("bob@example.com", result.get(0).getEmail()),
+            () -> assertEquals("jane@test.com", result.get(1).getEmail()),
+            () -> assertEquals("john@example.com", result.get(2).getEmail())
+        );
     }
 
     @Test
-    public void testGroupByEmailDomain() {
+    void shouldGroupByEmailDomain() {
         when(userRepository.findAll()).thenReturn(testUsers);
         
-        Map<String, List<Users>> result = userService.groupByEmailDomain();
+        var result = userService.groupByEmailDomain();
+        
+        assertAll(
+            () -> assertEquals(2, result.size()),
+            () -> assertTrue(result.containsKey("example.com")),
+            () -> assertTrue(result.containsKey("test.com")),
+            () -> assertEquals(2, result.get("example.com").size()),
+            () -> assertEquals(1, result.get("test.com").size())
+        );
+    }
+
+    @Test
+    void shouldSearchUsersByName() {
+        when(userRepository.findAll()).thenReturn(testUsers);
+        
+        var result = userService.searchUsersByName("john");
         
         assertEquals(2, result.size());
-        assertTrue(result.containsKey("example.com"));
-        assertTrue(result.containsKey("test.com"));
-        assertEquals(2, result.get("example.com").size());
-        assertEquals(1, result.get("test.com").size());
+        assertTrue(result.stream().allMatch(user -> 
+            user.getName().toLowerCase().contains("john")));
     }
 
     @Test
-    public void testSearchUsersByName() {
+    void shouldReturnEmptyListWhenNoNameMatch() {
         when(userRepository.findAll()).thenReturn(testUsers);
         
-        List<Users> result = userService.searchUsersByName("john");
+        var result = userService.searchUsersByName("xyz");
         
-        assertEquals(2, result.size());
-        assertTrue(result.get(0).getName().toLowerCase().contains("john"));
-        assertTrue(result.get(1).getName().toLowerCase().contains("john"));
-    }
-
-    @Test
-    public void testSearchUsersByNameNoMatch() {
-        when(userRepository.findAll()).thenReturn(testUsers);
-        
-        List<Users> result = userService.searchUsersByName("xyz");
-        
-        assertEquals(0, result.size());
+        assertTrue(result.isEmpty());
     }
 }
